--- a/digitalocean.css
+++ b/digitalocean.css
@@ -1,9 +1,10 @@
 /* Creazione della nav */
-.section-one{
+.top-section{
   background-image: url("https://www.digitalocean.com/assets/media/homepage/hero-background-c9490927.svg");
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
+  height:800px;
 }
 
 nav{
@@ -51,11 +52,12 @@ nav{
   border-radius: 5px;
   padding: 5px 10px;
 }
+
 /* Creazione header */
 
 header{
-  height:800px;
-  padding: 64px;
+  height:600px;
+  padding: 80px;
 }
 
 .header-left{
@@ -80,7 +82,7 @@ header{
 
 .header-right>.info-square{
   width:462px;
-  height: 477.33px;
+  height: 477px;
   background-color: #FFFF;
   border: 1px solid rgba(3,27,78,.1);
   border-radius: 5px;
@@ -162,6 +164,120 @@ header{
   cursor: pointer;
   color: #0069ff;
 }
+
+/* Creazione logo-section */
+
+
+.logo-section{
+  background-color: #f3f5f9;
+  text-align: center;
+  padding-bottom: 64px;
+  padding-top: 64px;
+}
+
+.logo-section .container{
+  width:1200px;
+}
+.logo-section .title>h2{
+  letter-spacing: .05em;
+  opacity: .3;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  margin: 0 0 16px;
+}
+
+.logolist{
+  padding-left: 32px;
+  padding-right: 32px;
+  margin-top: 16px;
+  margin-bottom:16px;
+}
+
+.logolist>ul{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  flex-wrap: nowrap;
+}
+
+.logolist>ul>li{
+  margin-right: 30px;
+}
+
+.logolist>ul>li>img{
+  max-width: 100%;
+  height:auto;
+}
+
+#splunk{
+  max-width:75%;
+}
+
+.logo-section a:hover{
+  text-decoration: none;
+}
+
+/* Creazione deploy section */
+
+.deploy{
+  padding-top: 120px;
+}
+
+.deploy-header> h2{
+  text-align: center;
+  font-size: 36px;
+  letter-spacing: -.9px;
+  color: #031b4e;
+  font-weight: 700;
+  line-height: 1.25;
+}
+
+.deploy-header> p{
+  text-align: center;
+  font-size: 20px;
+  margin-bottom: 64px;
+  margin-top: 16px;
+  color: rgba(3,27,78,.7);
+}
+
+.center-container{
+  width:900px;
+}
+
+.deploy-nav{
+  list-style: none;
+}
+
+#active-txt{
+  color: #031b4e;
+}
+
+#active-brd{
+  border-left-color: #0069ff;
+}
+
+.deploy-nav>li{
+  border-left: 2px solid #e5e8ed;
+  display: block;
+  padding: 16px 32px 16px 16px;
+  transition: border-left-color .25s linear;
+}
+
+.deploy-nav a{
+  color: rgba(3,27,78,.5);
+  font-size: 18px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.deploy-nav a:hover{
+  color: #031b4e;
+}
+
+
+
 
 @media all and (min-width: 960px){
     header {
